--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "element-plus": "^2.9.0",
     "emailjs-com": "^3.2.0",
     "sass": "^1.81.0",
+    "swiper": "^11.2.2",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
